--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -270,9 +270,9 @@ categories: item
             </div>
 
             <div class="col-md-4">
-                <img class="d-block w-100" src="../../../../assets/img/product/{{page.image}}.jpeg" style="margin-top:20px" alt="First slide">               
+                <img class="d-block w-100" src="../../../../assets/img/product/{{page.image}}.png" style="margin-top:20px" alt="First slide">               
                 <h1 class="text-center">
-                    <br>Just for Rs.{{page.price}} <del>{{page.original_price}}</del><br>
+                    <br>Just for Rs.{{page.price}} <br>
                     <a href="#"><img src="../../../../assets/images/payment-icon/paytm.png" style="width:60px; height:40px"></a>
 					<a href="#"><img src="../../../../assets/images/payment-icon/phonepay.png" style="width:60px; height:40px"></a>
                 </h1>
