--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -276,19 +276,19 @@ categories: sale
 					</ol>
 					<div class="carousel-inner">
 							<div class="carousel-item active">
-									<img class="d-block w-100" src="../../../../assets/img/product/{{page.image1}}.jpeg" alt="First slide">
+									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="First slide">
 									<div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color1}}</h5>
 									</div>
 							</div>
 							<div class="carousel-item">
-									<img class="d-block w-100" src="../../../../assets/img/product/{{page.image1}}.jpeg" alt="Second slide">
+									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="Second slide">
 									<div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color2}}</h5>
 									</div>
 							</div>
 							<div class="carousel-item">
-									<img class="d-block w-100" src="../../../../assets/img/product/{{page.image1}}.jpeg" alt="Third slide">
+									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="Third slide">
 									<div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color3}}</h5>
 									</div>
