--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -122,7 +122,7 @@ categories: sale
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="../../../../assets/img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="../../../../index.html"><img src="../../../../assets/img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -277,21 +277,21 @@ categories: sale
 					<div class="carousel-inner">
 							<div class="carousel-item active">
 									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="First slide">
-									<div class="carousel-caption d-none d-md-block">
+									<!--div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color1}}</h5>
-									</div>
+									</div-->
 							</div>
 							<div class="carousel-item">
 									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="Second slide">
-									<div class="carousel-caption d-none d-md-block">
+									<!--div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color2}}</h5>
-									</div>
+									</div-->
 							</div>
 							<div class="carousel-item">
 									<img class="d-block w-100" src="../../../../assets/img/sale/{{page.image1}}.jpeg" alt="Third slide">
-									<div class="carousel-caption d-none d-md-block">
+									<!--div class="carousel-caption d-none d-md-block">
 											<h5>{{page.color3}}</h5>
-									</div>
+									</div-->
 							</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -313,11 +313,21 @@ categories: sale
             </div>
 
             <div class="col-md-8">
-                <iframe src="{{page.form_link}}" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/{{page.form_link}}/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" class="form" marginwidth="0">Loading…</iframe>
             </div>
 
         </div>
     </div>
+    
+    <style>
+        @media only screen and (max-width: 600px) {
+            .form {
+                height: 2550px;
+            }
+        }
+    </style>
+
+    <h2 class="text-center">Thanks for your order, we will connect with you soon.</h2>
 </section>    
     <!-- Start Footer  -->
     <footer>
