--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -199,6 +199,7 @@ categories: sale
                             </ul>
                         </li-->
                         <li class="nav-item"><a class="nav-link" href="../../../../service.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../../../../payment.html">Payment</a></li>
                         <li class="nav-item"><a class="nav-link" href="../../../../contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -306,8 +307,8 @@ categories: sale
                 
                 <h1 class="text-center">
                     Just for Rs.{{page.price}} <br>
-                    <a href="#"><img src="../../../../assets/images/payment-icon/paytm.png" style="width:60px; height:40px"></a>
-					<a href="#"><img src="../../../../assets/images/payment-icon/phonepay.png" style="width:60px; height:40px"></a>
+                    <a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/paytm.png" style="width:60px; height:40px"></a>
+					<a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/phonepay.png" style="width:60px; height:40px"></a>
                 </h1>
 				
             </div>
