--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -305,10 +305,11 @@ categories: sale
 					</a>
                 </div>
                 
+                <h2 class="text-center">Product Code: {{page.productcode}}</h2>
                 <h1 class="text-center">
                     Just for Rs.{{page.price}} <br>
                     <a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/paytm.png" style="width:60px; height:40px"></a>
-					<a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/google.png" style="width:60px; height:40px"></a>
+                    <a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/google.png" style="width:60px; height:40px"></a>
                 </h1>
 				
             </div>
@@ -328,7 +329,9 @@ categories: sale
         }
     </style>
 
-    <h2 class="text-center">Thanks for your order, we will connect with you soon.</h2>
+    <h2 class="text-center"><a href=../../../../payment.html>Click here for Payment</a></h2>
+
+    <h2 class="text-center"><br><br> After Successfull Payment <a href="https://forms.gle/KVDRLF9KmFPeS1Xi8">Click here <br><br></a></h2>
 </section>    
     <!-- Start Footer  -->
     <footer>
