Payment method modifies

--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -305,7 +305,7 @@ categories: sale
 					</a>
                 </div>
                 
-                <h2 class="text-center">Product Code: {{page.productcode}}</h2>
+                <h2 class="text-center"><br>Product Code: {{page.productcode}}</h2>
                 <h1 class="text-center">
                     Just for Rs.{{page.price}} <br>
                     <a href="../../../../payment.html"><img src="../../../../assets/images/payment-icon/paytm.png" style="width:60px; height:40px"></a>
@@ -329,9 +329,8 @@ categories: sale
         }
     </style>
 
-    <h2 class="text-center"><a href=../../../../payment.html>Click here for Payment</a></h2>
+    <h2 class="text-center"><button class="btn" style="color:white"><a href=../../../../payment.html>Click here for Payment</a></button><a </h2>
 
-    <h2 class="text-center"><br><br> After Successfull Payment <a href="https://forms.gle/KVDRLF9KmFPeS1Xi8">Click here <br><br></a></h2>
 </section>    
     <!-- Start Footer  -->
     <footer>
