Payment method modifies

--- a/_layouts/sale.html
+++ b/_layouts/sale.html
@@ -360,10 +360,10 @@ Place your first orders here!
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="service.html">Customer Service</a></li>
-                                <li><a href="Term & Conditions.pdf" target="_blank">Terms &amp; Conditions</a></li>
-                                <li><a href="Delivery Information.pdf" target="_blank">Delivery Information</a></li>
+                                <li><a href="../../../../about.html">About Us</a></li>
+                                <li><a href="../../../../service.html">Customer Service</a></li>
+                                <li><a href="../../../../Term & Conditions.pdf" target="_blank">Terms &amp; Conditions</a></li>
+                                <li><a href="../../../../Delivery Information.pdf" target="_blank">Delivery Information</a></li>
                             </ul>
                         </div>
                     </div>
@@ -372,7 +372,7 @@ Place your first orders here!
                             <h4>Contact Us</h4>
                             <ul>
 								<li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address:<a href="location">A-302 HBU nagar main Pushkar road Ajmer</a> 
+                                    <p><i class="fas fa-map-marker-alt"></i>Address:<a href="../../../../location">A-302 HBU nagar main Pushkar road Ajmer</a> 
                                 </li>
                                 <li>
                                     <p><i class="fas fa-phone-square"></i>Phone: <a href="tel://7014759453">7014759453</a></p>
