Terms and condition

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,10 +26,10 @@ Place your first orders here!
                         <div class="footer-link">
                             <h4>Information</h4>
                             <ul>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="service.html">Customer Service</a></li>
-                                <li><a href="Term & Conditions.pdf" target="_blank">Terms &amp; Conditions</a></li>
-                                <li><a href="Delivery Information.pdf" target="_blank">Delivery Information</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./service.html">Customer Service</a></li>
+                                <li><a href="./terms.html">Terms &amp; Conditions</a></li>
+                                <li><a href="./location.html">Delivery Information</a></li>
                             </ul>
                         </div>
                     </div>
